<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashboardAdmin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:background="@drawable/rectangle_green">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="20dp"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/Grey"
                android:text="Welcome Back!"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:src="@drawable/profile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_bold"
                android:text="Admin"
                android:textColor="@color/Green"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rectangle_white_db"
            android:elevation="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="17dp"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_file"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginLeft="18dp"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/Green"
                    android:text="@string/data_pendaftar"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_chevron_right"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rectangle_white_db"
            android:elevation="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="17dp"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_file_plus"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginLeft="18dp"

                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/Green"
                    android:text="@string/tambah_data_pendaftar"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnTbh_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_chevron_right"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rectangle_white_db"
            android:elevation="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="17dp"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_user"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginLeft="18dp"

                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/Green"
                    android:text="Edit Akun Admin"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnEdit_adm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_chevron_right"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rectangle_white_db"
            android:elevation="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="17dp"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_user_plus"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginLeft="18dp"

                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/Green"
                    android:text="@string/tambah_akun_admin"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnTbh_adm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_chevron_right"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>